--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lotto</title>
 </head>
 <body>
-    <h1>I want Big Money!</h1>
-    <div class="seletedNum"></div>
-    <div class="bonusNum"></div>
+    <h1>👩‍⚕️: 난 재미로 로또하는 거야</h1>
+    <button id="js-createNumBtn">번호생성하기</button>
+    <div id="js-winningNum" class="winningNum"></div>
+    <div id="js-bonusNum" class="bonusNum"></div>
     <script src="./index.js"></script>
 </body>
 </html>
